# story-to-reel

./: .gitignore  ARCHITECTURE.md  ISSUE_TEMPLATE.md  MODULE_QUICK_REFERENCE.md  README.md  example.py  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cli.py
app/api/: __init__.py  endpoints.py  main.py
app/core/: __init__.py  config.py  font_manager.py
app/interfaces/: __init__.py  asset_manager.py  llm_provider.py  video_composer.py
app/models/: __init__.py  video_script.py
app/services/: __init__.py  asset_manager.py  llm_provider.py  script_generator.py  video_composer.py  video_generator.py
tests/: __init__.py  conftest.py  test_asset_manager.py  test_config.py  test_llm_provider.py  test_models.py  test_script_generator.py  test_video_generator.py
